syntax = "proto3";

package healthcheck;

option java_package = "pl.edu.mimuw.proto.healthcheck";
option java_multiple_files = true;

enum HealthStatusCode {
  Healthy = 0;
  Error = 1;
}

message Ping {
}

message PingResponse {
  HealthStatusCode status_code = 3;
}
